--- a/settings.json
+++ b/settings.json
@@ -7,9 +7,9 @@
     "auto_welcome": true,
     "auto_leave": true,
 	"prefix": ".",
-	"ownerNumber": "62887435047326",
-	"ownername": "ZeeoneOfc",
-	"botname":"LordUserbot",
+	"ownerNumber": "6283830815715",
+	"ownername": "XarzzOwner",
+	"botname":"XArzzBotzz",
 	"thumbnail":"LordUserbot_Thumb_1.jpg",
 	"fakethumb":"LordUserbot_Thumb_1.jpg",
 	"url_gif":"https://telegra.ph/file/c864fc477fa22e0d4bfc3.mp4"
